updated destroyer test case

--- a/hw1/hw1_destroyer.in
+++ b/hw1/hw1_destroyer.in
@@ -7,6 +7,8 @@ EXTEND -2 2 green
 EXTEND 9 -2 green
 DEMOLISH 9
 SKYLINE 10
+BUILD 2 2 blue
+BUILD 9 100 black
 DEMOLISH 10
 DEMOLISH -1
 SKYLINE -1
